2.3/manifests/task2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-https
  labels:
    app: nginx-https
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-https
  template:
    metadata:
      labels:
        app: nginx-https
    spec:
      volumes:
        - name: nginx-html
          configMap:
            name: nginx-https-html
      containers:
        - name: nginx
          image: nginx:1.27
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-html
              mountPath: /usr/share/nginx/html
