2.3/manifests/task2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-https
spec:
  selector:
    app: nginx-https
  ports:
    - name: http
      port: 80
      targetPort: 80
